@@ -1,5 +1,8 @@
 2007-10-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
+	* R/complete.R (completeStems): Completes (heuristically) word
+	stems.
+
 	* R/termdocmatrix.R (TermDocMatrix2): New modular
 	constructor.
 
